fix vertical align bug

--- a/src/CheckboxGroup.less
+++ b/src/CheckboxGroup.less
@@ -6,12 +6,18 @@
  * All rights reserved.
  */
 
- .kuma-checkbox-group {
+ :root .kuma-checkbox-group {
     > label {
         display: inline-block;
-        color: @text-color;
+        line-height: 16px;
+        s {
+            vertical-align: top;
+            display: inline-block;
+        }
         span {
-            padding: 0px 20px 0px 4px;
+            vertical-align: top;
+            display: inline-block;
+            padding: 0px 20px 0px 0px;
         }
     }
  }
